# world-at-war

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml  space-track-test.sh
crates/server/: Cargo.toml  Dockerfile
crates/server/src/: airport_catalog.rs  credential_cookie.rs  main.rs  space_assets.rs  space_catalog.rs
crates/sim-ai/: Cargo.toml
crates/sim-ai/src/: lib.rs
crates/sim-catalog/: Cargo.toml
crates/sim-catalog/src/: airport.rs  lib.rs  space.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: lib.rs
crates/sim-scenario/: Cargo.toml
crates/sim-scenario/src/: lib.rs
data/space-cards/: card-frontmatter.schema.json  downloads.json  family-rules.json  overrides.json  sources.json
deploy/nginx/: Dockerfile.dev  edge.conf  edge.dev.conf
web/: Dockerfile  Dockerfile.e2e  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
web/e2e/: space-track.e2e.ts
web/src/: AuthorityWorkspace.tsx  MapFilterDialog.tsx  SpaceAssetViewer.test.ts  SpaceAssetViewer.tsx  airportLayer.test.ts  airportLayer.ts  globeEntities.test.ts  globeEntities.ts  main.tsx  mapKeyboardControls.test.ts  mapKeyboardControls.ts  spaceAssetLayer.ts  spaceAssetWorker.ts  styles.css
