[workspace]
members = [
  "crates/sim-core",
  "crates/sim-catalog",
  "crates/sim-scenario",
  "crates/sim-ai",
  "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "ws"] }
base64 = "0.22"
bevy_ecs = "0.18"
chacha20poly1305 = "0.10"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["cookies", "json", "rustls-tls"], default-features = false }
secrecy = "0.10"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "macros", "rt-multi-thread", "sync", "net", "time"] }
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace"] }
uuid = { version = "1.12", features = ["serde", "v4"] }
