[package]
name = "world-at-war-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
secrecy.workspace = true
sha2.workspace = true
sim-ai = { path = "../sim-ai" }
sim-core = { path = "../sim-core" }
sim-scenario = { path = "../sim-scenario" }
tokio.workspace = true
tower-http.workspace = true
uuid.workspace = true
