[package]
name = "sim-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[[bin]]
name = "space-card-enrich"
path = "src/bin/space-card-enrich.rs"
